syntax = "proto3";

package proto;

option java_multiple_files = true;
option java_package = "generated_proto_classes";
option java_outer_classname = "AddressBookProtos";

message Person{
  optional string name = 1;
  optional int32 id = 2;
  optional string email = 3;

  enum PhoneType {
    PHONE_TYPE_UNSPECIFIED = 0;
    PHONE_TYPE_MOBILE = 1;
    PHONE_TYPE_HOME = 2;
    PHONE_TYPE_WORK = 3;
  }
  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
}

message AddressBook {
  repeated Person people = 1;
}

//run below command to generate proto classes

/*protoc -I=D:\Projects\protocolBuffer\src\main\java\proto
--java_out=D:\Projects\protocolBuffer\src\main\java\proto
D:\Projects\protocolBuffer\src\main\java\proto\addressbook.proto*/